Add package metadata

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "heft-jest",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Integrates Heft and Jest",
   "license": "MIT",
+  "repository": {
+    "url": "https://github.com/octogonz/heft-jest"
+  },
+  "bugs": {
+    "url": "https://github.com/octogonz/heft-jest/issues"
+  },
   "scripts": {
     "build": "heft test --clean"
   },
